# GeoNature-BiodivTerritoires

./: .dockerignore  .env  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  VERSION  config.py  docker-compose.override.dev.yaml  docker-compose.override.prod.yaml  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt  server.py  start_gunicorn.sh  wsgi.py
app/: __init__.py  api_routes.py  rendered_routes.py  utils.py
app/core/: env.py  utils.py
app/core/api/: routes.py
app/core/frontend/: routes.py
app/models/: datas.py  dynamic_content.py  ref_geo.py  synthese.py  taxonomy.py  territory.py
app/models.py/: ref_geo.py
app/static/: base_map.js  bundle.css  bundle.js  main.css  main.js
app/static/assets/: base_map.js  bundle.css  bundle.js  datatables.css  datatables.js  datatables.min.css  datatables.min.js  main.css  main.js
app/templates/: 404.html  about.html  datas.html  dynamic_page.html  home.html  territory.html
app/templates/core/: assets.html  assets_css.html  assets_js.html  embed_layout.html  footer.html  layout.html  navbar.html  search_territory.html  test.html
app/templates/territory/: _embed_main.html  _main.html  charts.html  data_distribution.html  gen_stats.html  list_species.html  situation_map.html  surrounding_areas.html  threatenedSpecies.html  threatened_species.html
conf/: settings.ini  settings.ini.sample
config/: __init__.py  config.py.sample
configs/: README.md  config py.sample  config.py.sample
data/: README.md  area_selection.sql  custom_data.sql  init_db.sql
data/scripts/: custom_grid.sql
docs/: README.md
install/: README.md  install_db.sh
main/: rendered_routes.py  utils.py
main/models/: ref_geo.py
templates/: home.html  territory.html
templates/core/: assets.html  footer.html  layout.html  navbar.html
