[tool.poetry]
name = "GeoNature-biodiv-territoires"
version = "0.1.0"
description = "Porté à connaissance de la biodiversité des territoires"
authors = ["lpofredc <frederic.cloitre@lpo.fr>"]
license = "AGPL-3.0-or-later"
packages = [
    { include = "app" },
    { include = "wsgi.py"},
]

[tool.poetry.scripts]
start = 'wsgi:app'

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Admin = "^1.6.0"
psycopg2-binary = "^2.9.3"
GeoAlchemy2 = "^0.11.1"
pypnnomenclature = "^1.5.1"
Shapely = "^1.8.2"
Flask-CKEditor = "^0.4.6"
geojson = "^2.5.0"
utils-flask-sqlalchemy = "^0.2.6"
utils-flask-sqlalchemy-geo = "^0.2.2"
Flask-Caching = "^1.10.1"
redis = "^4.3.1"
Flask-Assets = "^2.0"

[tool.poetry.dev-dependencies]
coloredlogs = "^15.0.1"
black = "^22.3.0"
mypy = "^0.950"
flake8 = "^4.0.1"
isort = "^5.10.1"
pylint = "^2.13.8"


[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 79
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
