[tool.poetry]
name = "GeoNature-biodiv-territoires"
version = "0.99.1"
description = "Porté à connaissance de la biodiversité des territoires"
authors = ["lpofredc <frederic.cloitre@lpo.fr>"]
license = "AGPL-3.0-or-later"
packages = [
    { include = "app" },
    { include = "wsgi.py"},
]

[tool.poetry.scripts]
start = 'wsgi:app'

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-sqlalchemy = "2.5.1"
flask-admin = "^1.6.0"
psycopg2-binary = "^2.9.5"
geoalchemy2 = "0.11.1"
pypnnomenclature = "^1.5.3"
shapely = "^1.8.5.post1"
flask-ckeditor = "^0.4.6"
geojson = "^2.5.0"
utils-flask-sqlalchemy = "^0.3.0"
utils-flask-sqlalchemy-geo = "^0.2.5"
redis = "^4.3.4"
flask-assets = "^2.0"
flask-caching = "^2.0.1"
python-decouple = "^3.6"


[tool.poetry.group.dev.dependencies]
coloredlogs = "^15.0.1"
black = "^22.10.0"
mypy = "^0.991"
flake8 = "^5.0.4"
isort = "^5.10.1"
pylint = "^2.15.5"
flask-monitoringdashboard = "^3.1.1"

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 79
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
